--- a/html/airbnb/airbnb.html
+++ b/html/airbnb/airbnb.html
@@ -58,6 +58,164 @@
     <figure>
       <img src="/img/airbnb_unit_by_arrond.png" srcset=""alt="airbnb-color-code">
     </figure>
+    
+    <h2>The most attractive Paris AirBnb rental units in Paris:</h2>
+    <p>Methodology:</p>
+    <p>In the category of Paris units that accommodate 4 people or less, see below for the units with the highest predicted values: </p>
+    <table>
+      <tr>
+        <th>Title</th>
+        <th>Listing url</th>
+        <th>Accommodates</th>
+        <th>Neighborhood</th>
+        <th>Price*</th>
+        <th>Expected Price</th>
+      </tr>
+      <tr>
+        <td>CLASSY STUDIO TOUR EIFFEL</td>
+        <td><a href='https://www.airbnb.com/rooms/24236332'>https://www.airbnb.com/rooms/24236332</a></td>
+        <td>2</td>
+        <td>Palais-Bourbon</td>
+        <td>150</td>
+        <td>430.31</td>
+      </tr>
+      <tr>
+        <td>Duplex 110 m2, 3 bedrooms, heart of marais</td>
+        <td><a href='https://www.airbnb.com/rooms/1852465	'>https://www.airbnb.com/rooms/1852465</a></td>
+        <td>4</td>
+        <td>Hôtel-de-Ville</td>
+        <td>250</td>
+        <td>343.46</td>
+      </tr>
+      <tr>
+        <td>Cœur de paris</td>
+        <td><a href='https://www.airbnb.com/rooms/17664057'>https://www.airbnb.com/rooms/17664057</a></td>
+        <td>4</td>
+        <td>Popincourt</td>
+        <td>200</td>
+        <td>337.15</td>
+      </tr>
+      <tr>
+        <td>Nice apartment/balcony/Montmartre Opera</td>
+        <td><a href='https://www.airbnb.com/rooms/6058893'>https://www.airbnb.com/rooms/6058893</a></td>
+        <td>4</td>
+        <td>Opéra</td>
+        <td>210</td>
+        <td>319.94</td>
+      </tr>
+      <tr>
+        <td>Beautiful XIX c. Style Apartment</td>
+        <td><a href='https://www.airbnb.com/rooms/348747'>https://www.airbnb.com/rooms/348747</a></td>
+        <td>4</td>
+        <td>Élysée</td>
+        <td>260</td>
+        <td>319.03</td>
+      </tr>
+    </table>  
+    <p>In the category of Paris units that accommodate 6 people or less, the units with the highest predicted values are: </p>
+    <table>
+      <tr>
+        <th>Title</th>
+        <th>Listing url</th>
+        <th>Accommodates</th>
+        <th>Neighborhood</th>
+        <th>Price*</th>
+        <th>Expected Price</th>
+      </tr>
+      <tr>
+        <td>Superb 4 bdrms 185m2 Apt Trocadero</td>
+        <td><a href='https://www.airbnb.com/rooms/2249308'>https://www.airbnb.com/rooms/2249308</a></td>
+        <td>6</td>
+        <td>Passy</td>
+        <td>650</td>
+        <td>463.18</td>
+      </tr>
+      <tr>
+        <td>A typical Parisian apartment:</td>
+        <td><a href='https://www.airbnb.com/rooms/10800486'>https://www.airbnb.com/rooms/10800486</a></td>
+        <td>6</td>
+        <td>Vaugirard</td>
+        <td>300</td>
+        <td>454.73</td>
+      </tr>
+      <tr>
+        <td>Flat 234m2 , 4 bedrooms, near Trocadéro</td>
+        <td><a href='https://www.airbnb.com/rooms/19903973'>https://www.airbnb.com/rooms/19903973</a></td>
+        <td>6</td>
+        <td>Passy</td>
+        <td>280</td>
+        <td>439.52</td>
+      </tr>
+      <tr>
+        <td>Nice family place near Trocadero</td>
+        <td><a href='https://www.airbnb.com/rooms/3487818'>https://www.airbnb.com/rooms/3487818</a></td>
+        <td>6</td>
+        <td>Passy</td>
+        <td>290</td>
+        <td>434.46</td>
+      </tr>
+      <tr>
+        <td>NEW-MAGIC VIEW - PARIS 7 VARENNE-</td>
+        <td><a href='https://www.airbnb.com/rooms/9353416'>https://www.airbnb.com/rooms/9353416</a></td>
+        <td>6</td>
+        <td>Palais-Bourbon</td>
+        <td>450</td>
+        <td>397.57</td>
+      </tr>
+    </table>  
+    <p>In the category of the pandemic is over so invite all your friends and family and party (no limit on accommodations), the highest predicted value units are: </p>
+    <table>
+      <tr style="height:2px;">
+        <th>Title</th>
+        <th>Listing url</th>
+        <th>Accommodates</th>
+        <th>Neighborhood</th>
+        <th>Price*</th>
+        <th>Expected Price</th>
+      </tr>
+      <tr style="height:2px;">
+        <td>Luxury 190 m² "Pied à terre" in the Heart of Paris</td>
+        <td><a href='https://www.airbnb.com/rooms/15658427'>https://www.airbnb.com/rooms/15658427</a></td>
+        <td>14</td>
+        <td>Bourse</td>
+        <td>1,386</td>
+        <td>804.27</td>
+      </tr>
+      <tr style="height:2px;">
+        <td>République, renovated 2016 6 bdrms,3WC,3 bathrooms</td>
+        <td><a href='https://www.airbnb.com/rooms/13243111'>https://www.airbnb.com/rooms/13243111</a></td>
+        <td>16</td>
+        <td>Entrepôt</td>
+        <td>280</td>
+        <td>712.90</td>
+      </tr>
+      <tr style="height:2px;">
+        <td>Luxury 6Bdr 5Bth in Heritage Building - LOUVRE VIEW</td>
+        <td><a href='https://www.airbnb.com/rooms/35984086'>https://www.airbnb.com/rooms/35984086</a></td>
+        <td>12</td>
+        <td>Louvre</td>
+        <td>810</td>
+        <td>682.61</td>
+      </tr>
+      <tr style="height:2px;">
+        <td>Maison Parisienne - Central Paris</td>
+        <td><a href='https://www.airbnb.com/rooms/16905683'>https://www.airbnb.com/rooms/16905683</a></td>
+        <td>10</td>
+        <td>Popincourt</td>
+        <td>707</td>
+        <td>660.66</td>
+      </tr>
+      <tr style="height:2px;">
+        <td>Wonderful house in the center of Paris</td>
+        <td><a href='https://www.airbnb.com/rooms/20798740'>https://www.airbnb.com/rooms/20798740</a></td>
+        <td>10</td>
+        <td>Popincourt</td>
+        <td>720</td>
+        <td>653.59</td>
+      </tr>
+    </table> 
+    <p>* Price refers to the price at the instance the information was scraped</p>
+    
     <p>I have also conducted similar analysis for a slew of other EU-27 cities. Please see links below:</p>
  
       <ul class='two-column'>
@@ -83,9 +241,6 @@
         <li><a href="/html/airbnb/vienna.html" >Vienna</a>: 11,294 listings; avg of €81.10</li>
       </ul>
 
-    <h2>Objective: Find the top 5 Airbnbs in Paris, by desired location:</h2>
-    <p>I have always been fascinated by airbnb. This project aims to use pandas and machine learning to explore Airbnb listing data, in order to find the top 5 Airbnb properties in Paris. The strategy needs to evolve around exploring the data, running regressions to figure out the importance of each variable in determnining price - and then filter based on conditions to find those units that are undervalued. </p>
-    <p>Process: find the most signficant determinants of price - self select for desired factos (ex - neighborhood, accomoodates 4 or less, etc</p>
     <h2>the dataset:</h2>
     <h2>The neighborhoods</h2>
     <h2>The result - top 5 and rationale</h2>
