--- a/html/work.html
+++ b/html/work.html
@@ -65,7 +65,7 @@
       <br>
 
       <section>
-        <a href="/html/project3.html" target="_blank">
+        <a href="/html/project3.html">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook]<br> Who are the top 25 basketball players of the past 20 years? I analyze 200k+ rows of data -- including per game data from 1,447 unique players and 24,600 games -- to find out: </h2>
             <img src="/img/NBA_2000s.png"alt="NBA-2000">
@@ -74,7 +74,7 @@
         <figure>
           <img src="/img/break5.png" srcset=""alt="break">
       </figure>
-        <a href="/html/airbnb/airbnb.html" target="_blank">
+        <a href="/html/airbnb/airbnb.html">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook] <br> Where are the 5 best airbnbs to stay in Paris? What are the 5 best, and most mispriced units across all EU-27 countries on the platform? </h2>
             <img src="/img/paris_airbnb3.png"alt="paris-airbnb">
@@ -83,7 +83,7 @@
         <figure>
           <img src="/img/break5.png" srcset=""alt="break">
       </figure>
-        <a href="/html/project1.html" target="_blank">
+        <a href="/html/project1.html">
            <div class="card">
              <h2><span><i></i></span> [Open Workbook] <br>Things that make you go hmmm....How many Python files did I create while teaching myself to program?
                  Is there a correlation between COVID-19 cases and files created?
@@ -98,7 +98,7 @@
         <figure>
             <img src="/img/break5.png" srcset=""alt="break">
         </figure>
-         <a href="/html/food_sql.html" target="_blank">
+         <a href="/html/food_sql.html">
            <div class="card">
              <h2><span><i></i></span> [Open Workbook] <br>You are what you eat - tracking my diet in December  --  and losing weight along the way -- with SQL and MyFitnessPal</h2>
              <img src="/img/healthy-food.jpeg"alt="stocks">
@@ -108,7 +108,7 @@
           <figure>
             <img src="/img/break5.png" srcset=""alt="break">
         </figure>
-         <a href="/html/project4.html" target="_blank">
+         <a href="/html/project4.html">
            <div class="card">
              <h2><span><i></i></span> [Open Workbook] <br>Starter Code and Resources - a running list of starter code that I find helpful in daily use with python and SQL</h2>
              <img src="/img/stocks.webp"alt="stocks">
