--- a/html/about.html
+++ b/html/about.html
@@ -77,7 +77,7 @@
       
     </p>
     
-    <div class="cta" style="margin-bottom: 0;"><a class="btn" href="/img/BrendanErhardresume 9.2021.pdf" target="_blank">Download my Resume</a></div>
+    <div class="cta" style="margin-bottom: 0;"><a class="btn" href="/img/Brendan Erhard resume 1.2022.pdf" target="_blank">Download my Resume</a></div>
    
     <footer>
       <hr/>
