--- a/html/work.html
+++ b/html/work.html
@@ -65,6 +65,15 @@
       <br>
 
       <section>
+        <a href="/html/aapl.html">
+          <div class="card">
+            <h2><span><i></i></span> [Open Workbook]<br> Analysis of AAPL stock before the release of flagship iPhone products </h2>
+            <img src="/img/AAPL_stock.png"alt="AAPL-stock">
+          </div>
+        </a>
+        <figure>
+          <img src="/img/break5.png" srcset=""alt="break">
+      </figure>
         <a href="/html/project3.html">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook]<br> Who are the top 25 basketball players of the past 20 years? I analyze 200k+ rows of data -- including per game data from 1,447 unique players and 24,600 games -- to find out: </h2>
