--- a/html/work.html
+++ b/html/work.html
@@ -65,7 +65,7 @@
       <br>
 
       <section>
-        <a href="/html/aapl.html">
+        <a href="/html/aapl_2.html">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook]<br> Analysis of AAPL stock before the release of flagship iPhone products </h2>
             <img src="/img/AAPL_stock.png"alt="AAPL-stock">
