--- a/html/aapl_2.html
+++ b/html/aapl_2.html
@@ -54,7 +54,7 @@
     </nav>
     
     <h3>The iPhone Halo Effect</h3>
-    <h5>All code for this product can be viewed here: <span><a href="https://nbviewer.org/github/bme3412/Python/blob/main/iphone.ipynb"> link</a></span></h5>
+    <h5>All code for this project can be viewed here: <span><a href="https://nbviewer.org/github/bme3412/Python/blob/main/iphone.ipynb"> link</a></span></h5>
     <p> 
     Apple, Inc ("AAPL") is best known as the creator of the iPhone, which as of most recent quarter accounted for 60% of the company's revenue and 40% of its profit. AAPL regularly reports metrics related to iPhone sales as part of its quarterly earnings reports - and for this reason, equity analysts regularly publish estimates for metrics related to iPhone units, unit growth, pricing trends, etc. These analyst estimates are then embedded in market expectations for investors. The near-annual cadence of iPhone product releases, and the importance of the stock - it is the largest company in the world, with a $2.5 trillion market cap -  presents an opportunity to detect potentially profitable patterns in the trading of AAPL stock leading up to and after the release of a flagship iPhone product. </p><br>
     </br><h4>Hypothesis:</h4> <br><h5>Buying AAPL stock 90 days before the launch of a flagship iPhone product delivers uncorrelated alpha as the market factors in rising expectations about a new product cycle; corollary: selling AAPL stock the day the iPhone goes on sale minimizes adverse outcomes from execution issues or results falling short of elevated expectations. </h5> <br>
